# awscost

./: README.md  pyproject.toml
awscost/: main.py  type.py
